Deploy automÃ¡tico - ConfiguraÃ§Ã£o Firebase e scripts de deploy

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "security:check": "npm audit && npm outdated",
     "security:update": "npm audit fix && npm update",
     "deploy": "npm run build && firebase deploy --only hosting",
-    "deploy:preview": "npm run build && firebase hosting:channel:deploy preview"
+    "deploy:preview": "npm run build && firebase hosting:channel:deploy preview",
+    "deploy:full": "powershell -ExecutionPolicy Bypass -File ./deploy.ps1",
+    "deploy:auto": "powershell -ExecutionPolicy Bypass -File ./deploy.ps1",
+    "git:deploy": "git add . && git commit -m \"Deploy automático\" && git push && npm run build && firebase deploy --only hosting"
   },
   "dependencies": {
     "react": "^18.2.0",
